Fixes overflowing items on landscape iOS

--- a/src/index.scss
+++ b/src/index.scss
@@ -96,25 +96,16 @@ break-toggle {
 
 @media (orientation: landscape) {
 
-  html {
-    font-size: 16px;
-  }
-
-  body {
-    width: 100%;
-    height: 100vh;
-    color: #f2f2f2;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    display: flex;
+  .wrapper {
+    position: relative;
     overflow: hidden;
+    height: 100vh;
   }
 
   main {
-    position: fixed;
+    position: absolute;
     z-index: 0;
-    top: 0rem;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
@@ -168,7 +159,7 @@ break-toggle {
 
 @media (orientation: portrait) {
 
-  body {
+  .wrapper {
     overflow-x: hidden;
   }
 
@@ -243,47 +234,6 @@ button {
 button {
   background: #121212;
   color: #f2f2f2;
-}
-
-youtube-video.active {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 4rem;
-  right: 0;
-  button {
-    display: none;
-  }
-}
-
-youtube-video:not(.active) {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  z-index: 1;
-  width: 270px;
-  height: 113px;
-  top: 2rem;
-  left: 2rem;
-  border: 1px solid rgba(255,255,255,0.2);
-
-  iframe {
-    height: 208px;
-  }
-
-  button {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0.5rem;
-    svg {
-      width: 1rem;
-      height: 1rem;
-      fill: #fff;
-    }
-  }
 }
 
 /* ----------------------------------
